# zaturn

./: .gitignore  CHANGELOG.md  README.md  config.py  core.py  mcp_server.py  pyproject.toml  query_utils.py  server.py  source_utils.py  test.sh  tinker.py  visualizations.py  zaturn_mcp.py
zaturn/mcp/: __init__.py  config.py  core.py  query_utils.py
zaturn/studio/: agent_wrapper.py  app.py  storage.py  zaturn_agent.py
zaturn/studio/templates/: _shell.html  ai_message.html  c_settings_updated.html  chat.html  function_call.html  manage_sources.html  new_conversation.html  settings.html  user_message.html
zaturn/studio/templates/css/: style.css
zaturn/tools/: __init__.py  core.py  query_utils.py  visualizations.py
