[project]
name = "zaturn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.1",
    "fastmcp>=0.4.1",
    "mysqlclient>=2.2.7",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-lsp-server>=1.12.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = []
