[project]
name = "zaturn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "duckdb>=1.2.1",
    "fastmcp>=0.4.1",
    "pandas>=2.2.3",
    "platformdirs>=4.3.7",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.1",
    "pymysql>=1.1.1",
    "python-lsp-server>=1.12.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = []
